namespace Lab6_Proxy
{
     interface IComponent
    {
        Component GetComponent(int id);
    }

}